--- a/.github/workflows/read-yaml.yml
+++ b/.github/workflows/read-yaml.yml
@@ -133,7 +133,7 @@ jobs:
 
       - name: Echo step output
         run: |
-          echo "Subscription ID: ***" # Masking the actual value for security
+          echo "Subscription ID: ${{ steps.read_action_js.outputs.subscription_id }}"
           echo "Resource Group: ${{ steps.read_action_js.outputs.resource_group }} AML Workspace: ${{ steps.read_action_js.outputs.aml_workspace }}"
           echo "Batch Endpoint: ${{ steps.read_action_js.outputs.bep }} Online Endpoint: ${{ steps.read_action_js.outputs.oep }}"
           echo "Terraform Version: ${{ steps.read_action_js.outputs.terraform_version }} Terraform Working Directory: ${{ steps.read_action_js.outputs.terraform_workingdir }}"
