--- a/.github/workflows/read-yaml.yml
+++ b/.github/workflows/read-yaml.yml
@@ -123,7 +123,7 @@ jobs:
 
       - name: Set Subscription ID
         run: |
-          sed -i 's/${AZURE_SUBSCRIPTION_ID}/${{ secrets.AZURE_SUBSCRIPTION_ID }}/g' ${{ github.workspace }}/${{ inputs.file_name }}
+          sed -i 's/${ARM_SUBSCRIPTION_ID}/${{ secrets.ARM_SUBSCRIPTION_ID }}/g' ${{ github.workspace }}/${{ inputs.file_name }}
 
       - name: Read YAML
         uses: AbinZorto/mlops-templates/read_yaml_action@main
