--- a/read_yaml_action/action.yml
+++ b/read_yaml_action/action.yml
@@ -58,6 +58,8 @@ outputs:
     description: 'Type of the data asset'
   data_description:
     description: 'Description of the data asset'
+  pipeline_file:
+    description: 'Path to the pipeline file'
 runs:
   using: 'node16'
   main: 'index.js'
