--- a/read_yaml_action/action.yml
+++ b/read_yaml_action/action.yml
@@ -60,6 +60,8 @@ outputs:
     description: 'Description of the data asset'
   pipeline_file:
     description: 'Path to the pipeline file'
+  modelname:
+    description: 'Name of the model'
 runs:
   using: 'node16'
   main: 'index.js'
